RESOLVED FIXED114662
REGRESSION(r146025): WebKit applications can't apply underline or strike through
https://bugs.webkit.org/show_bug.cgi?id=114662
Summary REGRESSION(r146025): WebKit applications can't apply underline or strike through
Ryosuke Niwa
Reported 2013-04-15 21:03:27 PDT
After http://trac.webkit.org/changeset/146025, OS X Application that embed WebKit cannot apply text decorations via font panel.
Attachments
Fixes the bug (3.84 KB, patch)
2013-04-15 21:05 PDT, Ryosuke Niwa
enrica: review+
Ryosuke Niwa
Comment 1 2013-04-15 21:05:57 PDT
Created attachment 198230 [details] Fixes the bug
Ryosuke Niwa
Comment 2 2013-04-16 11:12:56 PDT
Enrica Casucci
Comment 3 2013-04-16 11:15:16 PDT
Comment on attachment 198230 [details] Fixes the bug View in context: https://bugs.webkit.org/attachment.cgi?id=198230&action=review Looks good. > Source/WebKit/mac/ChangeLog:8 > + Use -webkit- prefixes to apply underline. There should be no further compat. issue since compatibility > Source/WebKit/mac/ChangeLog:11 > + Unforutnately, we can't test this code like any other font panel bug. typo: Unfortunately
Ryosuke Niwa
Comment 4 2013-04-16 11:24:15 PDT
Note You need to log in before you can comment on or make changes to this bug.