REGRESSION(r146025): WebKit applications can't apply underline or strike through https://bugs.webkit.org/show_bug.cgi?id=114662

Reviewed by Enrica Casucci.

Use -webkit- prefixes to apply underline. There should be no further compatibility issues
since -khtml- was used only internally to pass the information down to WebCore.

Unfortunately, we can't test this code like any other font panel bug.

In the long run, we need to add some abstraction layer around font panel to make this testable
or else we'll keep regressing this feature.

* WebView/WebHTMLView.mm:
(-[WebHTMLView _styleFromFontAttributes:]):
(-[WebHTMLView _styleForAttributeChange:]):


Canonical link: https://commits.webkit.org/133062@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148525 268f45cc-cd09-0410-ab3c-d52691b4dbfc